# led_cube_esp32

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  config.c  config.h  cube.c  cube.h  dns_captive.c  dns_captive.h  effect_aurora.c  effect_balls.c  effect_blackhole.c  effect_breakout.c  effect_calib.c  effect_chase.c  effect_disco.c  effect_dna.c  effect_fire.c  effect_fireworks.c  effect_galaxy.c  effect_lava.c  effect_lightning.c  effect_matrix.c  effect_ocean.c  effect_pendulum.c  effect_perlin_fire.c  effect_pingpong.c  effect_plasma.c  effect_pulse.c  effect_radial.c  effect_rain.c  effect_rainbow.c  effect_ripple.c  effect_rubik.c  effect_solid.c  effect_spiral.c  effect_supernova.c  effect_tetris.c  effect_tree.c  effect_warp.c  effects.c  effects.h  (+13 more)
main/web/: app.js  index.html  style.css
