idf_component_register(
    SRCS
        "main.c"
        "cube.c"
        "config.c"
        "orient.c"
        "render.c"
        "effects.c"
        "effect_rain.c"
        "effect_fire.c"
        "effect_rainbow.c"
        "effect_solid.c"
        "effect_calib.c"
        "effect_radial.c"
        "effect_balls.c"
        "effect_chase.c"
        "effect_plasma.c"
        "effect_pingpong.c"
        "effect_fireworks.c"
        "effect_matrix.c"
        "effect_galaxy.c"
        "effect_spiral.c"
        "effect_ripple.c"
        "effect_warp.c"
        "effect_aurora.c"
        "effect_lightning.c"
        "effect_breakout.c"
        "effect_pulse.c"
        "effect_tetris.c"
        "effect_pendulum.c"
        "effect_disco.c"
        "effect_supernova.c"
        "effect_ocean.c"
        "effect_perlin_fire.c"
        "effect_lava.c"
        "effect_rubik.c"
        "effect_tree.c"
        "effect_dna.c"
        "effect_blackhole.c"
        "ota.c"
        "net.c"
        "http.c"
        "dns_captive.c"
    INCLUDE_DIRS "."
    EMBED_FILES
        "web/index.html"
        "web/app.js"
        "web/style.css"
    REQUIRES
        nvs_flash
        esp_wifi
        esp_netif
        esp_http_server
        esp_event
        esp_timer
        esp_hw_support
        app_update
        esp_partition
        driver
        lwip
)
